Add KEEP_BRANCH var to example.env

--- a/.travis/example.env
+++ b/.travis/example.env
@@ -18,3 +18,6 @@ DEVELOP_BRANCH=develop
 
 # git branch for dev site
 REMOTE_DEVELOP_BRANCH=develop
+
+## Branch to keep multidev (Pantheon Only)
+#KEEP_BRANCH=update-ci-tools
