--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "sst/provus-ci",
 	"description": "CI component for Provus.",
-	"type": "drupal-config",
+	"type": "provus-tools",
 	"homepage": "https://github.com/promet/provus-ci",
 	"authors": [{
 		"name": "Steve Zipfel",
