Add new updates to pantheon deply and add debug (don't delete MD).

--- a/.travis/example.env
+++ b/.travis/example.env
@@ -19,5 +19,5 @@ DEVELOP_BRANCH=develop
 # git branch for dev site
 REMOTE_DEVELOP_BRANCH=develop
 
-## Branch to keep multidev (Pantheon Only)
-#KEEP_BRANCH=update-ci-tools
+## Branch to keep multidev (Pantheon Only) - Set to true to not delete multidevs but don't use up your quota!
+KEEP_BRANCH=false
